<resources>
    <string name="app_name">Generapp</string>
    <string name="welcometext">Generapp</string>
    <string name="dev_name">Ectario <b>alias</b> Dimitri Carlier</string>
    <string name="title_activity_new_home_page">NewHomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">With Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="general_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_historic">Historic</string>
    <string name="menu_rules_settings">Rules Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="theme_header">Theme</string>
    <string name="historic_header">Historic Settings</string>
    <string name="length_historic">Limited Historic Length</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Ectario</string>
    <string name="reply_title">Default reply action</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="infinity_historic_on">Infinite Historic Able</string>
    <string name="infinity_historic_off">Infinite Historic Disable</string>

    <!-- Keys Preferences  -->
    <string name="switch_infinite_historic">infinityLength</string>
    <string name="seekbar_limit_historic">length</string>
    <string name="key_words">Key Words</string>

</resources>