<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <PreferenceCategory app:title="@string/messages_header">-->

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--    </PreferenceCategory>-->

<!--    <PreferenceCategory app:title="@string/sync_header">-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/signature_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/general_settings"-->
<!--            app:summaryOn="@string/general_settings"-->
<!--            app:title="@string/app_name" />-->

<!--    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/theme_header">

        <SwitchPreferenceCompat
            app:key="@string/theme_header"
            app:summaryOff="@string/light_theme"
            app:summaryOn="@string/dark_theme"
            app:title="@string/theme_header" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/historic_header"
        app:icon="@drawable/ic_historic">

        <SwitchPreferenceCompat
            app:key="@string/switch_infinite_historic"
            app:summaryOff="@string/infinity_historic_on"
            app:summaryOn="@string/infinity_historic_off"
            app:title="@string/length_historic" />

        <SeekBarPreference
            app:key="@string/seekbar_limit_historic"
            app:updatesContinuously="true"
            app:dependency="infinityLength"
            app:defaultValue="30"
            app:showSeekBarValue="true"/>


    </PreferenceCategory>
</PreferenceScreen>